Add Base Styles and Header Styles

--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
             </fieldset>
             <fieldset>
                 <legend>Newsletter</legend>
-                <label>Select the newsletters you would like to reieve</label><br>
-                <input type="checkbox" name='newsletter' id='html-news' value='html news'><label for='html-news'>HTML News</label><br>
-                <input type="checkbox" name='newsletter' id='css-news' value='css news'><label for='css-news'>CSS News</label><br>
+                <label>Select the newsletters you would like to reieve</label>
+                <input type="checkbox" name='newsletter' id='html-news' value='html news'><label for='html-news'>HTML News</label>
+                <input type="checkbox" name='newsletter' id='css-news' value='css news'><label for='css-news'>CSS News</label>
                 <input type="checkbox" name='newsletter' id='javascript-news' value='javascript news'><label for='javascript-news'>Javascript
                     News
-                </label><br>
+                </label>
 
-                <label>Newsletter format</label><br>
-                <input type="radio" name="news-format" id="html-format" value='html format'><label for="html-format">HTML</label><br>
+                <label>Newsletter format</label>
+                <input type="radio" name="news-format" id="html-format" value='html format'><label for="html-format">HTML</label>
                 <input type="radio" name="news-format" id="plain-format" value='plain text format'><label for="plain-format">Plain
                     text
-                </label><br>
+                </label>
 
                 <label for="other-topics">Other topics you'd like to hear about</label>
                 <textarea name="other-topics" id="other-topics" cols="30" rows="10"></textarea>
