--- a/index.html
+++ b/index.html
@@ -11,103 +11,108 @@
 
 <body>
     <h1>The Code Review</h1>
-    <header>
-        <h2>Signup for our newsletter</h2>
-        <p>Get the latest news on how your code is doing right in your inbox</p>
-    </header>
-    <section id='signup-form'>
-        <form>
-            <fieldset>
-                <legend>Contact Information</legend>
-                <label for="name">Full Name</label>
-                <input type="text" id='name' name='name' placeholder='required' required>
-                <label for="email">Email Address</label>
-                <input type="email" id='email' name='email' placeholder='required' required>
-                <label for="number">Phone Number</label>
-                <input type="tel" id='number' name='number'>
-                <label for="city">City</label>
-                <input type="text" id='city' name='city'>
-                <label for="state">State</label>
-                <select name="state" id="state">
-                    <option value='' disabled selected>Choose State</option>
-                    <option value="Alabama">Alabama</option>
-                    <option value="Alaska">Alaska</option>
-                    <option value="Arizona">Arizona</option>
-                    <option value="Arkansas">Arkansas</option>
-                    <option value="California">California</option>
-                    <option value="Colorado">Colorado</option>
-                    <option value="Connecticut">Connecticut</option>
-                    <option value="Delaware">Delaware</option>
-                    <option value="Florida">Florida</option>
-                    <option value="Georgia">Georgia</option>
-                    <option value="Hawaii">Hawaii</option>
-                    <option value="Idaho">Idaho</option>
-                    <option value="Illinois">Illinois</option>
-                    <option value="Indiana">Indiana</option>
-                    <option value="Iowa">Iowa</option>
-                    <option value="Kansas">Kansas</option>
-                    <option value="Kentucky">Kentucky</option>
-                    <option value="Louisiana">Louisiana</option>
-                    <option value="Maine">Maine</option>
-                    <option value="Maryland">Maryland</option>
-                    <option value="Massachusetts">Massachusetts</option>
-                    <option value="Michigan">Michigan</option>
-                    <option value="Minnesota">Minnesota</option>
-                    <option value="Mississippi">Mississippi</option>
-                    <option value="Missouri">Missouri</option>
-                    <option value="Montana">Montana</option>
-                    <option value="Nebraska">Nebraska</option>
-                    <option value="Nevada">Nevada</option>
-                    <option value="New Hampshire">New Hampshire</option>
-                    <option value="New Jersey">New Jersey</option>
-                    <option value="New Mexico">New Mexico</option>
-                    <option value="New York">New York</option>
-                    <option value="North Carolina">North Carolina</option>
-                    <option value="North Dakota">North Dakota</option>
-                    <option value="Ohio">Ohio</option>
-                    <option value="Oklahoma">Oklahoma</option>
-                    <option value="Oregon">Oregon</option>
-                    <option value="Pennyslvania">Pennyslvania</option>
-                    <option value="Rhode Island">Rhode Island</option>
-                    <option value="South Carolina">South Carolina</option>
-                    <option value="South Dakota">South Dakota</option>
-                    <option value="Tennessee">Tennessee</option>
-                    <option value="Texas">Texas</option>
-                    <option value="Utah">Utah</option>
-                    <option value="Vermont">Vermont</option>
-                    <option value="Virginia">Virginia</option>
-                    <option value="Washington">Washington</option>
-                    <option value="West Virginia">West Virginia</option>
-                    <option value="Wisconsin">Wisconsin</option>
-                    <option value="Wyoming">Wyoming</option>
-                </select>
-                <label for="zip">Zip Code</label>
-                <input type="number" id='zip' name='zip'>
-            </fieldset>
-            <fieldset>
-                <legend>Newsletter</legend>
-                <label>Select the newsletters you would like to reieve</label>
-                <input type="checkbox" name='newsletter' id='html-news' value='html news'><label for='html-news'>HTML News</label>
-                <input type="checkbox" name='newsletter' id='css-news' value='css news'><label for='css-news'>CSS News</label>
-                <input type="checkbox" name='newsletter' id='javascript-news' value='javascript news'><label for='javascript-news'>Javascript
-                    News
-                </label>
+    <div class="container">
 
-                <label>Newsletter format</label>
-                <input type="radio" name="news-format" id="html-format" value='html format'><label for="html-format">HTML</label>
-                <input type="radio" name="news-format" id="plain-format" value='plain text format'><label for="plain-format">Plain
-                    text
-                </label>
 
-                <label for="other-topics">Other topics you'd like to hear about</label>
-                <textarea name="other-topics" id="other-topics" cols="30" rows="10"></textarea>
-            </fieldset>
-            <input type="button" value="Sign Up">
-        </form>
-        <footer>
-            <p>Copyright The Code Review</p>
-        </footer>
-    </section>
+        <header>
+            <h2>Signup for our newsletter</h2>
+            <p>Get the latest news on how your code is doing right in your inbox</p>
+        </header>
+        <section id='signup-form'>
+            <form>
+                <fieldset>
+                    <legend>Contact Information</legend>
+                    <label for="name">Full Name</label>
+                    <input type="text" id='name' name='name' placeholder='required' required>
+                    <label for="email">Email Address</label>
+                    <input type="email" id='email' name='email' placeholder='required' required>
+                    <label for="number">Phone Number</label>
+                    <input type="tel" id='number' name='number'>
+                    <label for="city">City</label>
+                    <input type="text" id='city' name='city'>
+                    <label for="state">State</label>
+                    <select name="state" id="state">
+                        <option value='' disabled selected>Choose State</option>
+                        <option value="Alabama">Alabama</option>
+                        <option value="Alaska">Alaska</option>
+                        <option value="Arizona">Arizona</option>
+                        <option value="Arkansas">Arkansas</option>
+                        <option value="California">California</option>
+                        <option value="Colorado">Colorado</option>
+                        <option value="Connecticut">Connecticut</option>
+                        <option value="Delaware">Delaware</option>
+                        <option value="Florida">Florida</option>
+                        <option value="Georgia">Georgia</option>
+                        <option value="Hawaii">Hawaii</option>
+                        <option value="Idaho">Idaho</option>
+                        <option value="Illinois">Illinois</option>
+                        <option value="Indiana">Indiana</option>
+                        <option value="Iowa">Iowa</option>
+                        <option value="Kansas">Kansas</option>
+                        <option value="Kentucky">Kentucky</option>
+                        <option value="Louisiana">Louisiana</option>
+                        <option value="Maine">Maine</option>
+                        <option value="Maryland">Maryland</option>
+                        <option value="Massachusetts">Massachusetts</option>
+                        <option value="Michigan">Michigan</option>
+                        <option value="Minnesota">Minnesota</option>
+                        <option value="Mississippi">Mississippi</option>
+                        <option value="Missouri">Missouri</option>
+                        <option value="Montana">Montana</option>
+                        <option value="Nebraska">Nebraska</option>
+                        <option value="Nevada">Nevada</option>
+                        <option value="New Hampshire">New Hampshire</option>
+                        <option value="New Jersey">New Jersey</option>
+                        <option value="New Mexico">New Mexico</option>
+                        <option value="New York">New York</option>
+                        <option value="North Carolina">North Carolina</option>
+                        <option value="North Dakota">North Dakota</option>
+                        <option value="Ohio">Ohio</option>
+                        <option value="Oklahoma">Oklahoma</option>
+                        <option value="Oregon">Oregon</option>
+                        <option value="Pennyslvania">Pennyslvania</option>
+                        <option value="Rhode Island">Rhode Island</option>
+                        <option value="South Carolina">South Carolina</option>
+                        <option value="South Dakota">South Dakota</option>
+                        <option value="Tennessee">Tennessee</option>
+                        <option value="Texas">Texas</option>
+                        <option value="Utah">Utah</option>
+                        <option value="Vermont">Vermont</option>
+                        <option value="Virginia">Virginia</option>
+                        <option value="Washington">Washington</option>
+                        <option value="West Virginia">West Virginia</option>
+                        <option value="Wisconsin">Wisconsin</option>
+                        <option value="Wyoming">Wyoming</option>
+                    </select>
+                    <label for="zip">Zip Code</label>
+                    <input type="number" id='zip' name='zip'>
+                </fieldset>
+                <fieldset>
+                    <legend>Newsletter</legend>
+                    <label>Select the newsletters you would like to reieve</label>
+                    <input type="checkbox" name='newsletter' id='html-news' value='html news'><label for='html-news'>HTML
+                        News</label>
+                    <input type="checkbox" name='newsletter' id='css-news' value='css news'><label for='css-news'>CSS News</label>
+                    <input type="checkbox" name='newsletter' id='javascript-news' value='javascript news'><label for='javascript-news'>Javascript
+                        News
+                    </label>
+
+                    <label>Newsletter format</label>
+                    <input type="radio" name="news-format" id="html-format" value='html format'><label for="html-format">HTML</label>
+                    <input type="radio" name="news-format" id="plain-format" value='plain text format'><label for="plain-format">Plain
+                        text
+                    </label>
+
+                    <label for="other-topics">Other topics you'd like to hear about</label>
+                    <textarea name="other-topics" id="other-topics" cols="30" rows="10"></textarea>
+                </fieldset>
+                <input type="button" value="Sign Up">
+            </form>
+            <footer>
+                <p>Copyright The Code Review</p>
+            </footer>
+        </section>
+    </div>
 </body>
 
 </html>
