--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <section id='signup-form'>
             <form>
-                <fieldset>
+                <fieldset id="contact">
                     <legend>Contact Information</legend>
                     <label for="name">Full Name</label>
                     <input type="text" id='name' name='name' placeholder='required' required>
@@ -87,11 +87,12 @@
                     <label for="zip">Zip Code</label>
                     <input type="number" id='zip' name='zip'>
                 </fieldset>
-                <fieldset>
+                <fieldset id='newsletter'>
                     <legend>Newsletter</legend>
                     <label>Select the newsletters you would like to reieve</label>
                     <input type="checkbox" name='newsletter' id='html-news' value='html news'><label for='html-news'>HTML
-                        News</label>
+                        News
+                    </label>
                     <input type="checkbox" name='newsletter' id='css-news' value='css news'><label for='css-news'>CSS News</label>
                     <input type="checkbox" name='newsletter' id='javascript-news' value='javascript news'><label for='javascript-news'>Javascript
                         News
