Add some borders, margins, padding, and color to several elements / Remove checkboxes and Radio Buttons
Added:
-Background Color, Border Radius to Input Boxes
-Border separating Newsletter and Contact info

Removed:
-Radio and Checkbox inputs. There was an issue with alignment and I want to retype them.
-Default Border around inputs.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <fieldset id="contact">
                     <legend>Contact Information</legend>
                     <label for="name">Full Name</label>
-                    <input type="text" id='name' name='name' placeholder='required' required>
+                    <input type="text" id='name' name='name' placeholder='Required' required>
                     <label for="email">Email Address</label>
-                    <input type="email" id='email' name='email' placeholder='required' required>
+                    <input type="email" id='email' name='email' placeholder='Required' required>
                     <label for="number">Phone Number</label>
                     <input type="tel" id='number' name='number'>
                     <label for="city">City</label>
@@ -89,20 +89,9 @@
                 </fieldset>
                 <fieldset id='newsletter'>
                     <legend>Newsletter</legend>
-                    <label>Select the newsletters you would like to reieve</label>
-                    <input type="checkbox" name='newsletter' id='html-news' value='html news'><label for='html-news'>HTML
-                        News
-                    </label>
-                    <input type="checkbox" name='newsletter' id='css-news' value='css news'><label for='css-news'>CSS News</label>
-                    <input type="checkbox" name='newsletter' id='javascript-news' value='javascript news'><label for='javascript-news'>Javascript
-                        News
-                    </label>
 
-                    <label>Newsletter format</label>
-                    <input type="radio" name="news-format" id="html-format" value='html format'><label for="html-format">HTML</label>
-                    <input type="radio" name="news-format" id="plain-format" value='plain text format'><label for="plain-format">Plain
-                        text
-                    </label>
+                    <label>Select the newsletters you would like to recieve</label>
+
 
                     <label for="other-topics">Other topics you'd like to hear about</label>
                     <textarea name="other-topics" id="other-topics" cols="30" rows="10"></textarea>
