--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
                     <legend>Newsletter</legend>
 
                     <label>Select the newsletters you would like to recieve</label>
-
+                    
+                    <div class="newsletter-option">
+                        <input type="checkbox" name='newsletters' id='html-news' value='HTML News'>
+                        <label for="html-news">HTML News</label>
+                    </div>
 
                     <label for="other-topics">Other topics you'd like to hear about</label>
                     <textarea name="other-topics" id="other-topics" cols="30" rows="10"></textarea>
