Add Styling to the sign up button. Add some spacing between lines in newsletter section.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <label for="other-topics">Other topics you'd like to hear about</label>
                     <textarea name="other-topics" id="other-topics" cols="30" rows="5"></textarea>
                 </fieldset>
-                <input type="button" value="Sign Up">
+                <input type="button" value="Sign Up" class='btn'>
             </form>
             <footer>
                 <p>Copyright The Code Review</p>
