Make the button a 'submit' button.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 <body>
     <h1>The Code Review</h1>
     <div class="container">
-
-
         <header>
             <h2>Signup for our newsletter</h2>
             <p>Get the latest news on how your code is doing right in your inbox</p>
@@ -117,7 +115,7 @@
                     <label for="other-topics">Other topics you'd like to hear about</label>
                     <textarea name="other-topics" id="other-topics" cols="30" rows="5"></textarea>
                 </fieldset>
-                <input type="button" value="Sign Up" class='btn'>
+                <input type="submit" value="Sign Up" class='btn'>
             </form>
             <footer>
                 <p>Copyright The Code Review</p>
