Add the 'hidden' attribute to the 'Choose State' option.
This makes it disappear in the list of states instead of just making it unclickable

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="text" id='city' name='city'>
                     <label for="state">State</label>
                     <select name="state" id="state">
-                        <option value='' disabled selected>Choose State</option>
+                        <option value='' disabled selected hidden>Choose State</option>
                         <option value="Alabama">Alabama</option>
                         <option value="Alaska">Alaska</option>
                         <option value="Arizona">Arizona</option>
